<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <LinearLayout
        android:id="@+id/login_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_and_register_for_frame"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/existing_user"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textFontWeight="400"/>

        <EditText
            android:id="@+id/login_email_et"
            android:inputType="textEmailAddress"
            android:layout_width="273dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_border"
            android:hint="@string/email_hint"
            android:paddingStart="8dp"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:textFontWeight="600"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="273dp"
                android:layout_height="45dp"
                android:background="@drawable/gray_border"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColorHint="@color/dark_gray"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/montserrat"
                android:textSize="15sp"
                android:textFontWeight="600" />

            <ImageButton
                android:id="@+id/login_hide_show_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/hide_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white_light"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:layout_weight="700"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_frame"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white_light"
            android:layout_weight="400"/>
        <TextView
            android:id="@+id/sign_up_redirect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_underlined"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white_light"
            android:layout_gravity="center"
            android:layout_weight="400"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>